<resources>
    <string name="app_name">Students Lab</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_navigation_main_events">Мероприятия</string>
    <string name="bottom_navigation_create_event">Создать</string>
    <string name="bottom_navigation_profile">Профиль</string>
    <string name="bottom_navigation_new">Создать</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="login">Войти</string>
    <string name="nickname">ФИО</string>
    <string name="password">Пароль</string>
    <string name="email">Почта</string>
    <string name="address">Address</string>
    <string name="lecture">Лекция</string>
    <string name="seminar">Семинар</string>
    <string name="description">Описание</string>
    <string name="title">Название</string>
    <string name="time_start_lesson">Начало урока</string>
    <string name="time_end_lesson">Конец урока</string>
    <string name="send_event">Опубликовать мероприятие</string>
    <string name="teacher">Teacher</string>
    <string name="phone">Phone: </string>
    <string name="contacts">Контакты</string>
    <string name="email_contacts">Почта: </string>
    <string name="timetable">Расписание</string>
    <string name="unknown">Неизвестно</string>
    <string name="type">Тип</string>

    <string-array name="type_events">
        <item>Лекция</item>
        <item>Семинар</item>
    </string-array>
</resources>