<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".registration.LoginActivity">

    <ImageView
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_main"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:background="@drawable/rounded_input"
        android:layout_margin="10dp"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorWhite"
            android:textColorLink="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:id="@+id/email_input"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:background="@drawable/rounded_input"
        android:layout_margin="10dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_input"
            android:inputType="textPassword"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textColorLink="@color/colorWhite"
            android:textColorHighlight="@color/colorWhite"
            android:shadowColor="@color/colorWhite"
            android:outlineAmbientShadowColor="@color/colorWhite"
            android:outlineSpotShadowColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="120dp"
        android:layout_marginLeft="120dp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorWhite"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="120dp"
        android:layout_marginLeft="120dp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorWhite"
        android:text="@string/login" />

</LinearLayout>