<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create.CreateEvent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Новое мероприятие"
        android:textSize="12pt"
        android:layout_margin="20px"
        android:fontFamily="casual"
        android:textFontWeight="500"
        android:textColor="@color/colorWhite"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:id="@+id/textField5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:background="@drawable/rounded_input"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/colorWhite">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorWhite"
            android:textColorLink="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:id="@+id/type_input"
            android:focusable="false"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:background="@drawable/rounded_input"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/colorWhite"
        android:hint="@string/title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorWhite"
            android:textColorLink="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:boxStrokeColor="@color/colorWhite"
            android:id="@+id/title_input"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:background="@drawable/rounded_input"
        android:layout_margin="10dp"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorWhite"
            app:boxStrokeColor="@color/colorWhite"
            android:textColorLink="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:id="@+id/description_input"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">
    <Button
        android:id="@+id/time_start_lesson"
        android:layout_width="150dp"
        android:layout_weight="50"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="50dp"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorWhite"
        android:text="@string/time_start_lesson" />

    <Button
        android:id="@+id/time_end_lesson"
        android:layout_width="150dp"
        android:layout_weight="50"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="20dp"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorWhite"
        android:text="@string/time_end_lesson" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:background="@drawable/rounded_input"
        android:layout_margin="10dp"
        android:hint="@string/address">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorWhite"
            android:textColorLink="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:id="@+id/address_input"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/send_event_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="120dp"
        android:layout_marginLeft="120dp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorWhite"
        android:text="@string/send_event" />

</LinearLayout>